[package]
name = "procalive"
version = "0.0.0"
authors = ["itchyny <itchyny@hatena.ne.jp>"]
description = "Keep your process alive!"
repository = "https://github.com/itchyny/procalive"
readme = "README.md"
license = "MIT"
keywords = []
categories = ["Command line utilities"]

[dependencies]
clap = "2.23"
itertools = "0.6"
libc = "0.2"
chan = "0.1.19"
chan-signal = "0.2"
